# api/swagger.yaml
@@ -388,9 +388,9 @@ definitions:
               enum:
                 - OBJECT_ADDITIONAL_PROPERTIES
                 - OBJECT_MISSING_REQUIRED_PROPERTY
-                - CONTACT_NUMBER_TYPE_NOT_EXIST
+                - CONTACT_NUMBR_TYPE_NOT_FOUND
                 - CONTACT_NUMBER_TYPE_DISABLED
-                - CONTACT_NUMBER_EXISTS
+                - CONTACT_NUMBER_ALREADY_EXISTS
             message:
               type: string
             path:
